Стилизация Главной исправлено

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,45 +1,28 @@
 .advantages {
   background-color: @basic-white;
 }
+
 .advantages__wrapper {
-  width: 260px;
+  width: 320px;
   margin: 0 auto;
   padding: 0 30px;
-  outline: 1px solid aqua;
+  outline: 5px solid aqua;
+  outline-offset: -5px;
 }
+
 .advantages__title {
-  color: @basic-black;
-  font-family: "Open Sans Bold", Arial, sans-serif;
-  font-size: 25px;
-  line-height: 30px;
   margin: 0;
 }
+
 .advantages__list {
   list-style: none;
   margin: 0;
   padding: 0;
 }
+
 .advantages__item {
   color: @basic-black;
-  font-family: "Open Sans Bold", Arial, sans-serif;
+  font-weight: 700;
   font-size: 17px;
   line-height: 20px;
-}
-.advantages__item--eco {
-
-}
-.advantages__item--price {
-
-}
-.advantages__item--likes {
-
-}
-.advantages__item--love {
-
-}
-.advantages__item--patriot {
-
-}
-.advantages__item--gift {
-
 }
