--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,47 +1,35 @@
 .contacts {
   background-color: @basic-white;
 }
+
 .contacts__wrapper {
-  width: 260px;
+  width: 320px;
   margin: 0 auto;
   padding: 0 30px;
-  outline: 1px solid gold;
+  outline: 5px solid gold;
+  outline-offset: -5px;
 }
+
 .contacts__title {
   color: @basic-black;
-  font-family: "Open Sans Bold", Arial, sans-serif;
+  font-weight: 700;
   font-size: 18px;
   line-height: 30px;
 }
+
 .contacts__list {
   color: @basic-grey;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-weight: 400;
   font-size: 14px;
   line-height: 30px;
   font-style: normal;
 }
-.contacts__item {
 
-}
-.contacts__text {
-
-}
 .contacts__email {
   color: @basic-grey;
   text-decoration: none;
 }
-.contacts__address {
 
-}
-.contacts__map {
-
-}
 .contacts__button {
-  color: @basic-grey;
-  font-family: "Open Sans Bold", Arial, sans-serif;
-  font-size: 18px;
-  line-height: 20px;
-  text-decoration: none;
-  text-transform: uppercase;
   margin: 0;
 }
