--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,12 +1,6 @@
-.copyright {
-
-}
 .copyright__text {
   color: @basic-black;
-  font-family: "Open Sans Bold", Arial, sans-serif;
+  font-weight: 700;
   font-size: 19px;
   line-height: 18px;
-}
-.copyright__link {
-
 }
