--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -1,59 +1,47 @@
 .reviews {
   background-color: @basic-white;
 }
+
 .reviews__wrapper {
-  width: 260px;
+  width: 320px;
   margin: 0 auto;
   padding: 0 30px;
-  outline: 1px solid fuchsia;
+  outline: 5px solid fuchsia;
+  outline-offset: -5px;
 }
+
 .reviews__title {
-  color: @basic-black;
-  font-family: "Open Sans Bold", Arial, sans-serif;
-  font-size: 25px;
-  line-height: 30px;
   margin: 0;
 }
-.reviews__list {
 
-}
 .reviews__item {
   color: @basic-grey;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-weight: 400;
   font-size: 15px;
   line-height: 30px;
   margin: 0;
 }
+
 .reviews__item--name {
   color: @basic-black;
-  font-family: "Open Sans Bold", Arial, sans-serif;
+  font-weight: 700;
   font-size: 17px;
   line-height: 24px;
   margin: 0;
 }
+
 .reviews__item--link {
   color: @basic-grey;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-weight: 400;
   font-size: 17px;
   line-height: 30px;
   text-decoration: none;
   margin: 0;
 }
-.reviews__buttons-container {
 
-}
-.reviews__button {
-
-}
-.reviews__button--left {
-
-}
-.reviews__button--right {
-
-}
 .reviews__button-write {
   color: @basic-grey;
-  font-family: "Open Sans Bold", Arial, sans-serif;
+  font-weight: 700;
   font-size: 18px;
   line-height: 20px;
   text-decoration: none;
