--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,9 +1,7 @@
-.page-footer {
-
-}
 .page-footer__wrapper {
   width: 320px;
   margin: 0 auto;
   background-color: @special-grey;
-  outline: 1px solid maroon;
+  outline: 5px solid maroon;
+  outline-offset: -5px;
 }
