--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,14 +1,9 @@
 .page-header {
   background-color: @basic-white;
   color: @basic-black;
-  width: 260px;
+  width: 320px;
   margin: 0 auto;
   padding: 0 30px;
-  outline: 1px solid red;
-}
-.page-header__logo {
-
-}
-.page-header__slogan {
-
+  outline: 5px solid red;
+  outline-offset: -5px;
 }
