--- a/source/less/blocks/sections-nav.less
+++ b/source/less/blocks/sections-nav.less
@@ -1,27 +1,33 @@
 .sections-nav {
   background-color: @basic-white;
 }
+
 .sections-nav__wrapper {
   width: 320px;
   margin: 0 auto;
   padding: 0;
-  outline: 1px solid orange;
+  outline: 5px solid orange;
+  outline-offset: -5px;
 }
+
 .sections-nav__list {
   list-style: none;
   margin: 0;
   padding: 0;
 }
+
 .sections-nav__item a {
   color: @basic-white;
-  font-family: "Open Sans Bold", Arial, sans-serif;
+  font-weight: 700;
   font-size: 19px;
   line-height: 24px;
   text-decoration: none;
 }
+
 .sections-nav__item-left {
   background-color: @special-green-lighter;
 }
+
 .sections-nav__item-right {
   background-color: @special-green-darker;
 }
