--- a/source/less/blocks/slogan.less
+++ b/source/less/blocks/slogan.less
@@ -1,14 +1,18 @@
 .slogan {
   background-color: @basic-white;
 }
+
 .slogan__wrapper {
   width: 320px;
   margin: 0 auto;
-  outline: 1px solid purple;
+  padding: 0 30px;
+  outline: 5px solid purple;
+  outline-offset: -5px;
 }
+
 .slogan__title {
   color: @basic-black;
-  font-family: "Open Sans Bold", Arial, sans-serif;
+  font-weight: 700;
   font-size: 27px;
   line-height: 30px;
   text-decoration: none;
