--- a/source/less/blocks/user-list.less
+++ b/source/less/blocks/user-list.less
@@ -1,9 +1,10 @@
 .user-list {
   background-color: @basic-white;
 }
+
 .user-list__item a {
   color: @basic-black;
-  font-family: "Open Sans Bold", Arial, sans-serif;
+  font-weight: 700;
   font-size: 17px;
   line-height: 24px;
   text-decoration: none;
