--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,17 +1,21 @@
 @font-face {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
-  src: local('Open Sans'), local('OpenSans'),
-  url('../fonts/opensans.woff2') format('woff2'),
-  url('../fonts/opensans.woff') format('woff');
+  src:
+    local("Open Sans"),
+    local("OpenSans"),
+    url("../fonts/opensans.woff2") format("woff2"),
+    url("../fonts/opensans.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Open Sans Bold';
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
-  src: local('Open Sans Bold'), local('OpenSansBold'),
-  url('../fonts/opensansbold.woff2') format('woff2'),
-  url('../fonts/opensansbold.woff') format('woff');
+  src:
+    local("Open Sans"),
+    local("OpenSans"),
+    url("../fonts/opensansbold.woff2") format("woff2"),
+    url("../fonts/opensansbold.woff") format("woff");
 }
