--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,33 +1,18 @@
 @import "variables.less";
-
 @import "fonts.less";
-
 @import "global.less";
-
+@import "typography.less";
 @import "blocks/page.less";
-
 @import "blocks/page-header.less";
-
 @import "blocks/main-nav.less";
-
 @import "blocks/site-list.less";
-
 @import "blocks/user-list.less";
-
 @import "blocks/page-main.less";
-
 @import "blocks/slogan.less";
-
 @import "blocks/sections-nav.less";
-
 @import "blocks/product.less";
-
 @import "blocks/advantages.less";
-
 @import "blocks/reviews.less";
-
 @import "blocks/contacts.less";
-
 @import "blocks/page-footer.less";
-
 @import "blocks/copyright.less";
