Отдельный файл buttons.less

--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -12,13 +12,13 @@
 
 .product__title {
   margin: 0;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 20px;
+  color: @basic-green;
 }
 
 .product__name {
-  color: @basic-black;
-  font-weight: 700;
-  font-size: 25px;
-  line-height: 30px;
   margin: 0;
 }
 
