--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,6 +2,7 @@
 @import "fonts.less";
 @import "global.less";
 @import "typography.less";
+@import "buttons.less";
 @import "blocks/page.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
