Стилизация страницы формы

--- a/source/less/blocks/sections-nav.less
+++ b/source/less/blocks/sections-nav.less
@@ -25,7 +25,7 @@
 }
 
 .sections-nav__item-left {
-  background-color: @special-green-lighter;
+  background-color: @basic-green;
 }
 
 .sections-nav__item-right {
