--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,7 +2,6 @@
 @import "fonts.less";
 @import "global.less";
 @import "typography.less";
-@import "buttons.less";
 @import "blocks/page.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
@@ -17,3 +16,9 @@
 @import "blocks/contacts.less";
 @import "blocks/page-footer.less";
 @import "blocks/copyright.less";
+@import "blocks/button.less";
+@import "blocks/slogan-form.less";
+@import "blocks/main-form.less";
+@import "blocks/form.less";
+@import "blocks/radio.less";
+@import "blocks/checkbox.less";
