Добавлены стили кнопок

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,4 +1,5 @@
 .button {
+  display: block;
   font-family: inherit;
   color: @basic-grey;
   font-weight: 700;
@@ -6,6 +7,8 @@
   line-height: 20px;
   text-transform: uppercase;
   text-decoration: none;
+  text-align: center;
+  padding: 14px 11px;
+  border: 2px solid @basic-grey;
   cursor: pointer;
-  width: 100%;
 }
