Внутренние отступы на всех страницах

--- a/source/less/blocks/slogan-form.less
+++ b/source/less/blocks/slogan-form.less
@@ -2,7 +2,10 @@
   background-color: @basic-white;
   width: 320px;
   margin: 0 auto;
-  padding: 0 30px;
+  padding-top: 17px;
+  padding-bottom: 37px;
+  padding-left: 30px;
+  padding-right: 30px;
   outline: 5px solid sienna;
   outline-offset: -5px;
 }
