--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -5,7 +5,7 @@
 .advantages__wrapper {
   width: 320px;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 30px;
   outline: 5px solid aqua;
   outline-offset: -5px;
 }
@@ -25,4 +25,9 @@
   font-weight: 700;
   font-size: 17px;
   line-height: 20px;
+}
+
+.advantages__description {
+  margin: 0;
+  padding: 0;
 }
