--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -5,7 +5,7 @@
 .contacts__wrapper {
   width: 320px;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 30px;
   outline: 5px solid gold;
   outline-offset: -5px;
 }
@@ -15,6 +15,7 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 30px;
+  margin: 0;
 }
 
 .contacts__list {
