--- a/source/less/blocks/main-form.less
+++ b/source/less/blocks/main-form.less
@@ -6,7 +6,8 @@
   background-color: @basic-white;
   width: 320px;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 30px;
+  padding-bottom: 55px;
   outline: 5px solid blue;
   outline-offset: -5px;
 }
