--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -5,7 +5,7 @@
 .reviews__wrapper {
   width: 320px;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 30px;
   outline: 5px solid fuchsia;
   outline-offset: -5px;
 }
