--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -5,3 +5,9 @@
 
 @special-grey: #F1F1F1;
 @special-green-darker: #56C3B2;
+
+// Viewports
+
+@tablet-width: 768px;
+@desktop-width: 1150px;
+@mobile-width-only: 767px;
