--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,10 +1,37 @@
 .main-nav {
   background-color: @basic-white;
   color: @basic-black;
+  outline: 5px solid black;
+  outline-offset: -5px;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr min-content;
+    grid-template-rows: 88px 64px;
+  }
 }
 
 .main-nav__list {
   list-style: none;
   margin: 0;
   padding: 0;
+  text-align: left;
+  outline: 5px solid yellow;
+  outline-offset: -5px;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+  }
+}
+
+.main-nav__toggle {
+  align-self: flex-end;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
