--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -3,11 +3,49 @@
   color: @basic-black;
   width: 320px;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 0;
   outline: 5px solid red;
   outline-offset: -5px;
+  text-align: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    width: 768px;
+    padding: 0 50px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1150px;
+    padding: 0 50px;
+  }
 }
 
 .page-header__slogan {
   display: none;
+
+  @media (min-width: @tablet-width) {
+    display: block;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    justify-self: end;
+  }
+}
+
+.page-header__logo {
+
+
+  @media (min-width: @tablet-width) {
+    position: absolute;
+    left: 50px;
+    top: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 500px;
+    top: 20px;
+  }
 }
