--- a/source/less/blocks/sections-nav.less
+++ b/source/less/blocks/sections-nav.less
@@ -8,12 +8,32 @@
   padding: 0;
   outline: 5px solid orange;
   outline-offset: -5px;
+
+  @media (min-width: @tablet-width) {
+    width: 768px;
+    padding: 0 50px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1150px;
+    padding: 0 50px;
+  }
 }
 
 .sections-nav__list {
   list-style: none;
   margin: 0;
   padding: 0;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.sections-nav__item {
+  min-height: 115px;
 }
 
 .sections-nav__item a {
@@ -26,8 +46,16 @@
 
 .sections-nav__item-left {
   background-color: @basic-green;
+
+  @media (min-width: @tablet-width) {
+    width: 50%;
+  }
 }
 
 .sections-nav__item-right {
   background-color: @special-green-darker;
+
+  @media (min-width: @tablet-width) {
+    width: 50%;
+  }
 }
