--- a/source/less/blocks/slogan.less
+++ b/source/less/blocks/slogan.less
@@ -8,6 +8,18 @@
   padding: 0 30px;
   outline: 5px solid purple;
   outline-offset: -5px;
+  min-height: 283px;
+
+  @media (min-width: @tablet-width) {
+    width: 768px;
+    padding: 0 50px;
+    min-height: 580px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1150px;
+    padding: 0 50px;
+  }
 }
 
 .slogan__title {
@@ -18,4 +30,15 @@
   text-decoration: none;
   text-align: center;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 53px;
+    line-height: 57px;
+  }
+
 }
