--- a/source/less/blocks/slogan.less
+++ b/source/less/blocks/slogan.less
@@ -1,5 +1,5 @@
 .slogan {
-  background-color: @basic-white;
+  background-color: @special-grey-background;
 }
 
 .slogan__wrapper {
@@ -40,5 +40,4 @@
     font-size: 53px;
     line-height: 57px;
   }
-
 }
