--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -5,6 +5,8 @@
 
 @special-grey: #F1F1F1;
 @special-green-darker: #56C3B2;
+@special-green-lighter: #ECECEC;
+@special-grey-background: #f9f9f9;
 
 // Viewports
 
