--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -3,11 +3,115 @@
 }
 
 .contacts__wrapper {
-  width: 320px;
+  min-width: 320px;
   margin: 0 auto;
-  padding: 30px;
+  padding: 30px 0;
   outline: 5px solid gold;
   outline-offset: -5px;
+
+  @media (min-width: @tablet-width) {
+    min-width: 768px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1150px;
+    padding: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: min-content  min-content min-content;
+  }
+}
+
+.contacts__title-container {
+  width: 320px;
+  margin: 0 auto;
+  padding: 0 30px;
+
+  @media (min-width: @tablet-width) {
+    width: 768px;
+    margin: 0 auto;
+    padding: 0 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: auto;
+    margin: 0;
+    padding: 0;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+}
+
+.contacts__list {
+  width: 320px;
+  margin: 0 auto;
+  padding: 0 30px;
+
+  @media (min-width: @tablet-width) {
+    width: 768px;
+    margin: 0 auto;
+    padding: 0 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: auto;
+    margin: 0;
+    padding: 0;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+}
+
+.contacts__map {
+  width: 100%;
+  margin-bottom: 42px;
+
+  img {
+    height: 454px;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 55px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column-start: 4;
+    grid-column-end: 7;
+    grid-row-start: 1;
+    grid-row-end: -1;
+    margin: 0;
+  }
+}
+
+.contacts__item {
+  display: flex;
+  flex-direction: row;
+
+  @media (min-width: @tablet-width) {
+    width: 50%;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: auto;
+  }
 }
 
 .contacts__title {
@@ -16,21 +120,57 @@
   font-size: 18px;
   line-height: 30px;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 67%;
+    font-size: 53px;
+    line-height: 57px;
+  }
 }
 
-.contacts__list {
-  color: @basic-grey;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 30px;
-  font-style: normal;
+.contacts__flag {
+  margin: 0;
+  padding: 0;
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: block;
+  }
+}
+
+.contacts__text {
+  margin: 0;
+  padding: 0;
+  padding-right: 30px;
 }
 
 .contacts__email {
-  color: @basic-grey;
-  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
+.contacts__address {
+  padding: 0;
+  margin: 0;
 }
 
 .contacts__button {
-  margin: 0;
+  width: 260px;
+  margin: 0 auto;
+  padding: 0 30px;
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+    padding: 0;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: -1;
+    grid-row-end: -2;
+    align-self: end;
+  }
 }
