--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -11,21 +11,28 @@
 
   @media (min-width: @tablet-width) {
     width: 768px;
-    padding: 0 50px;
+    padding: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: min-content 1fr min-content min-content;
   }
 
   @media (min-width: @desktop-width) {
     width: 1150px;
-    padding: 0 50px;
+    padding: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: min-content 1fr min-content min-content;
   }
 }
 
-.product__name-container {
-  @media (min-width: @tablet-width) {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    align-items: flex-end;
+.product__item {
+  display: flex;
+  padding: 8px 0;
+  border-bottom: 1px solid @special-green-lighter;
+
+  &:last-child {
+    margin-bottom: 28px;
   }
 }
 
@@ -42,13 +49,79 @@
 
   @media (min-width: @tablet-width) {
     br {
-    display: block;
+      display: block;
     }
+
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+    margin-top: 70px;
+  }
+}
+
+.product__image {
+  @media (min-width: @tablet-width) {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 2;
+    grid-row-end: -1;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column-start: 4;
+    grid-column-end: 7;
+    grid-row-start: 1;
+    grid-row-end: -1;
   }
 }
 
 .product__title {
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    align-self: flex-start;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column-start: 2;
+    grid-column-end: 6;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    z-index: 2;
+    margin-top: 70px;
+  }
+}
+
+.product__container {
+  @media (min-width: @tablet-width) {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    align-self: flex-start;
+    margin-right: 42px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
 }
 
 .product__text {
@@ -57,6 +130,17 @@
   font-size: 15px;
   line-height: 24px;
   margin: 0;
+  margin-bottom: 28px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 17px;
+    line-height: 30px;
+    margin-bottom: 48px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 60px;
+  }
 }
 
 .product__list {
@@ -73,8 +157,39 @@
   font-size: 17px;
   line-height: 24px;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: -3;
+    grid-row-end: -2;
+    text-align: center;
+    margin-right: 42px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 4;
+  }
 }
 
 .product__button {
   margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: -1;
+    grid-row-end: -2;
+    margin-right: 42px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 4;
+    grid-row-end: 5;
+  }
 }
