--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,3 +1,8 @@
 .social__list {
   margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
