--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -3,20 +3,12 @@
 }
 
 .advantages__wrapper {
-  width: 320px;
-  margin: 0 auto;
   padding: 30px;
   outline: 5px solid aqua;
   outline-offset: -5px;
 
-  @media (min-width: @tablet-width) {
-    width: 768px;
-    padding: 50px;
-  }
-
   @media (min-width: @desktop-width) {
-    width: 1150px;
-    padding: 50px 217px;
+    padding: 50px 225px;
   }
 }
 
@@ -30,7 +22,9 @@
   padding: 0;
 
   @media (min-width: @tablet-width) {
-    column-count: 2;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 
@@ -41,14 +35,31 @@
   line-height: 20px;
 
   @media (min-width: @tablet-width) {
-    page-break-inside: avoid;
-    display: inline-block;
+    flex: 1 0 350px;
+    max-width: 350px;
+
     margin-bottom: 80px;
     font-size: 20px;
     line-height: 22px;
 
     &:nth-child(3n) {
       margin-bottom: 0;
+    }
+
+    &:nth-child(1) {
+      order: -3;
+    }
+
+    &:nth-child(2) {
+      order: -1;
+    }
+
+    &:nth-child(4) {
+      order: -2;
+    }
+
+    &:nth-child(5) {
+      order: -1;
     }
   }
 }
