--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,21 +1,17 @@
+.page-footer {
+  background-color: @special-grey;
+}
+
 .page-footer__wrapper {
-  width: 320px;
-  margin: 0 auto;
   background-color: @special-grey;
   outline: 5px solid maroon;
   outline-offset: -5px;
 
   @media (min-width: @tablet-width) {
-    width: 768px;
     padding: 50px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 1150px;
-    padding: 50px;
   }
 }
 
