--- a/source/less/global.less
+++ b/source/less/global.less
@@ -21,3 +21,18 @@ img {
 *::after {
   box-sizing: border-box;
 }
+
+.container {
+  max-width: 320px;
+  padding: 0 30px;
+  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    max-width: 768px;
+    padding: 0 50px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 1150px;
+  }
+}
