Переработано меню, введён серый фон

--- a/source/less/blocks/special-list.less
+++ b/source/less/blocks/special-list.less
@@ -1,7 +1,5 @@
 .special-list {
-  background-color: @basic-white;
-  outline: 5px solid green;
-  outline-offset: -5px;
+  background-color: transparent;
   display: none;
 
   @media (min-width: @tablet-width) {
@@ -11,8 +9,8 @@
   @media (min-width: @desktop-width) {
     display: flex;
     flex-direction: row;
-    grid-column-start: 1;
-    grid-column-end: 2;
+    grid-column-start: 2;
+    grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
     align-self: center;
