--- a/source/less/blocks/user-list.less
+++ b/source/less/blocks/user-list.less
@@ -1,14 +1,15 @@
 .user-list {
-  background-color: @basic-white;
+  background-color: transparent;
+  /*
   outline: 5px solid green;
   outline-offset: -5px;
-
+*/
   @media (min-width: @tablet-width) {
-    grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 2;
-    justify-self: end;
+    text-align: right;
   }
 }
 
