--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,14 +1,18 @@
 .main-nav {
   background-color: @basic-white;
   color: @basic-black;
-  outline: 5px solid black;
-  outline-offset: -5px;
   display: flex;
   flex-direction: column;
 
   @media (min-width: @tablet-width) {
     display: grid;
-    grid-template-columns: 1fr min-content;
+    grid-template-columns: auto 320px 348px auto;
+    grid-template-rows: 88px 64px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: grid;
+    grid-template-columns: auto 701px 349px auto;
     grid-template-rows: 88px 64px;
   }
 }
@@ -18,8 +22,6 @@
   margin: 0;
   padding: 0;
   text-align: left;
-  outline: 5px solid yellow;
-  outline-offset: -5px;
   display: flex;
   flex-direction: column;
 
@@ -33,5 +35,18 @@
 
   @media (min-width: @tablet-width) {
     display: none;
+  }
+}
+
+.main-nav__special {
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: block;
+    background-color: @special-grey-background;
+    grid-column-start: 1;
+    grid-column-end: -1;
+    grid-row-start: 2;
+    grid-row-end: 3;
   }
 }
