--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,10 +1,6 @@
 .page-header {
   background-color: @basic-white;
   color: @basic-black;
-
-
-  outline: 5px solid red;
-  outline-offset: -5px;
   text-align: center;
   position: relative;
   display: flex;
@@ -15,9 +11,10 @@
   display: none;
 
   @media (min-width: @tablet-width) {
+    background-color: transparent;
     display: block;
-    grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 3;
     justify-self: end;
@@ -27,12 +24,12 @@
 .page-header__logo {
   @media (min-width: @tablet-width) {
     position: absolute;
-    left: 50px;
+    left: calc(50% - 334px);
     top: 20px;
   }
 
   @media (min-width: @desktop-width) {
-    left: 500px;
+    left: calc(50% - 43px);
     top: 20px;
   }
 }
