--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,19 +1,18 @@
 .site-list {
-  background-color: @basic-white;
-  outline: 5px solid green;
-  outline-offset: -5px;
+  background-color: transparent;
 
   @media (min-width: @tablet-width) {
-    grid-column-start: 1;
-    grid-column-end: 2;
+
+    grid-column-start: 2;
+    grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
     align-self: center;
   }
 
   @media (min-width: @desktop-width) {
-    grid-column-start: 1;
-    grid-column-end: 2;
+    grid-column-start: 2;
+    grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
     align-self: center;
@@ -26,4 +25,14 @@
   font-size: 17px;
   line-height: 24px;
   text-decoration: none;
+
+  @media (min-width: @tablet-width) {
+    font-size: 15px;
+    line-height: 24px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 17px;
+    line-height: 24px;
+  }
 }
