--- a/source/less/global.less
+++ b/source/less/global.less
@@ -36,3 +36,14 @@ img {
     max-width: 1150px;
   }
 }
+
+.container-100 {
+  max-width: 320px;
+  padding: 0 30px;
+  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    max-width: 100%;
+    padding: 0;
+  }
+}
