--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -10,6 +10,7 @@
 .page-header__slogan {
   display: none;
 
+
   @media (min-width: @tablet-width) {
     background-color: transparent;
     display: block;
@@ -19,6 +20,20 @@
     grid-row-end: 3;
     justify-self: end;
   }
+/*
+  @media (min-width: @tablet-width) {
+    background-color: @special-grey-background;
+    display: block;
+    grid-column-start: 1;
+    grid-column-end: -1;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    z-index: 0;
+    margin: 0;
+    padding: 0;
+    padding-left: calc(50% - 134px);
+  }
+*/
 }
 
 .page-header__logo {
