--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -8,6 +8,7 @@
     grid-row-start: 2;
     grid-row-end: 3;
     align-self: center;
+    z-index: 1;
   }
 
   @media (min-width: @desktop-width) {
