Адаптивная сетка страницы Форма

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -2,6 +2,7 @@
   display: block;
   font-family: inherit;
   color: @basic-grey;
+  background-color: transparent;
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
