--- a/source/less/blocks/main-form.less
+++ b/source/less/blocks/main-form.less
@@ -4,10 +4,12 @@
 
 .main-form__wrapper {
   background-color: @basic-white;
-  width: 320px;
-  margin: 0 auto;
-  padding: 30px;
+  padding-top: 30px;
   padding-bottom: 55px;
   outline: 5px solid blue;
   outline-offset: -5px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 0;
+  }
 }
