--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -7,13 +7,23 @@
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: auto 320px 348px auto;
-    grid-template-rows: 88px 64px;
+    grid-template-rows: min-content min-content;
+
+    &::before {
+      content: "";
+      display: block;
+      background-color: @special-grey-background;
+      grid-column-start: 1;
+      grid-column-end: -1;
+      grid-row-start: 2;
+      grid-row-end: 3;
+    }
   }
 
   @media (min-width: @desktop-width) {
     display: grid;
     grid-template-columns: auto 701px 349px auto;
-    grid-template-rows: 88px 64px;
+    grid-template-rows: min-content min-content;
   }
 }
 
@@ -32,31 +42,8 @@
 
 .main-nav__toggle {
   align-self: flex-end;
-  cursor: pointer;
 
   @media (min-width: @tablet-width) {
-    background-color: @special-grey-background;
-    display: block;
-    grid-column-start: 1;
-    grid-column-end: -1;
-    grid-row-start: 2;
-    grid-row-end: 3;
-    height: 100%;
-    border: none;
-    cursor: auto;
+    display: none;
   }
 }
-/*
-.main-nav__special {
-  display: none;
-
-  @media (min-width: @tablet-width) {
-    display: block;
-    background-color: @special-grey-background;
-    grid-column-start: 1;
-    grid-column-end: -1;
-    grid-row-start: 2;
-    grid-row-end: 3;
-  }
-}
-*/
