--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -4,11 +4,38 @@
   margin: 0;
 }
 
+.page-main__wrapper {
+  width: 100%;
+  background-color: @special-grey-background;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 177px;
+}
+
 .page-main__title {
   color: @basic-black;
   font-weight: 700;
   font-size: 27px;
   line-height: 30px;
   text-decoration: none;
+  max-width: 320px;
   margin: 0 auto;
+  padding: 0 30px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 43px;
+    line-height: 50px;
+    max-width: 768px;
+    padding: 0 50px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 53px;
+    line-height: 57px;
+    max-width: 1150px;
+    padding: 0 50px;
+  }
 }
