--- a/source/less/blocks/radio.less
+++ b/source/less/blocks/radio.less
@@ -1,6 +1,7 @@
 .radio {
   margin: 0;
-  padding: 0;
+  padding-bottom: 20px;
+  padding-top: 0;
 }
 
 .radio__label {
@@ -8,4 +9,8 @@
   font-size: 17px;
   line-height: 18px;
   color: @basic-black;
+
+  @media (min-width: @tablet-width) {
+    font-size: 19px;
+  }
 }
