--- a/source/less/blocks/slogan-form.less
+++ b/source/less/blocks/slogan-form.less
@@ -1,11 +1,7 @@
 .slogan-form__wrapper {
   background-color: @basic-white;
-  width: 320px;
-  margin: 0 auto;
   padding-top: 17px;
-  padding-bottom: 37px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-bottom: 29px;
   outline: 5px solid sienna;
   outline-offset: -5px;
 }
@@ -16,4 +12,16 @@
   line-height: 24px;
   color: @basic-grey;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 17px;
+    line-height: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 17px;
+    line-height: 30px;
+    padding-left: 175px;
+    padding-right: 175px;
+  }
 }
