--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -83,6 +83,7 @@
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: -1;
+    justify-self: center;
   }
 }
 
@@ -141,6 +142,12 @@
       grid-column-end: 2;
       grid-row-start: 1;
       grid-row-end: -1;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &--contacts {
+      padding-left: 60px;
     }
   }
 }
