--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -5,15 +5,25 @@
 }
 
 .catalog__wrapper {
-  width: 320px;
-  margin: 0 auto;
-  padding: 30px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   outline: 5px solid lime;
   outline-offset: -5px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 110px;
+    padding-bottom: 57px;
+  }
 }
 
 .catalog__list {
   list-style: none;
   margin: 0;
   padding: 0;
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
