--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -5,11 +5,23 @@
 }
 
 .video__wrapper {
-  width: 320px;
-  margin: 0 auto;
   padding: 30px;
   outline: 5px solid blue;
   outline-offset: -5px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 50px 67px 50px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: min-content min-content min-content;
+    padding: 050px;
+    margin-bottom: 60px;
+  }
 }
 
 .video__title {
@@ -18,7 +30,47 @@
   line-height: 24px;
   color: @basic-black;
   margin: 0;
-  padding: 0;
+  padding: 0 34px;
+
+  @media (min-width: @tablet-width) {
+    order: 1;
+    padding: 0 40px;
+
+    br {
+      display: none;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column-start: -1;
+    grid-column-end: -3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    font-size: 20px;
+    margin-top: 96px;
+    align-self: self-start;
+
+    br {
+      display: inline;
+    }
+  }
+}
+
+.video__container {
+  @media (min-width: @tablet-width) {
+    order: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-height: 455px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: -1;
+  }
 }
 
 .video__text {
@@ -27,5 +79,36 @@
   line-height: 24px;
   color: @basic-grey;
   margin: 0;
-  padding: 0;
+  padding: 0 34px;
+
+  @media (min-width: @tablet-width) {
+    order: 2;
+    padding: 0 40px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column-start: -1;
+    grid-column-end: -3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    align-self: self-start;
+  }
+}
+
+.video__button {
+  margin: 0 34px;
+
+  @media (min-width: @tablet-width) {
+    order: 3;
+    margin: 0 40px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column-start: -1;
+    grid-column-end: -3;
+    grid-row-start: -1;
+    grid-row-end: -2;
+    min-height: 52px;
+    align-self: self-start;
+  }
 }
