Исправлена Кталог после первой прооверки

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -24,6 +24,13 @@
   @media (min-width: @desktop-width) {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+}
+
+.catalog__item {
+  @media (min-width: @desktop-width) {
+    margin-right: 51px;
   }
 }
