--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -18,7 +18,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 0;
+    margin: 0 51px 0 0;
+
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
   }
 }
 
