--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -17,9 +17,9 @@
 
   @media (min-width: @desktop-width) {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(6, 1fr);
     grid-template-rows: min-content min-content min-content;
-    padding: 050px;
+    padding: 0 50px;
     margin-bottom: 60px;
   }
 }
@@ -33,7 +33,6 @@
   padding: 0 34px;
 
   @media (min-width: @tablet-width) {
-    order: 1;
     padding: 0 40px;
 
     br {
@@ -58,7 +57,7 @@
 
 .video__container {
   @media (min-width: @tablet-width) {
-    order: 0;
+    order: -1;
   }
 
   @media (min-width: @desktop-width) {
@@ -82,7 +81,6 @@
   padding: 0 34px;
 
   @media (min-width: @tablet-width) {
-    order: 2;
     padding: 0 40px;
   }
 
@@ -99,7 +97,6 @@
   margin: 0 34px;
 
   @media (min-width: @tablet-width) {
-    order: 3;
     margin: 0 40px;
   }
 
