--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -32,5 +32,9 @@
 .catalog__item {
   @media (min-width: @desktop-width) {
     margin-right: 51px;
+
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
   }
 }
