--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -5,8 +5,12 @@
 
 @special-grey: #F1F1F1;
 @special-green-darker: #56C3B2;
-@special-green-lighter: #ECECEC;
+@special-grey-lighter: #ECECEC;
 @special-grey-background: #f9f9f9;
+@special-black: #231F20;
+@special-green-underline: #62D1BA;
+@special-green-underline-2: #46C1AE;
+@special-grey-divide: #e5e5e5;
 
 // Viewports
 
