--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -3,6 +3,8 @@
   color: @basic-black;
   display: flex;
   flex-direction: column;
+  position: relative;
+  width: auto;
 
   @media (min-width: @tablet-width) {
     display: grid;
@@ -17,6 +19,7 @@
       grid-column-end: -1;
       grid-row-start: 2;
       grid-row-end: 3;
+      border-top: 1px solid fade(@basic-black, 10%);
     }
   }
 
@@ -42,8 +45,68 @@
 
 .main-nav__toggle {
   align-self: flex-end;
+  position: absolute;
+  top: -67px;
+  right: -2px;
+  z-index: 2;
+  display: block;
+  width: 70px;
+  height: 50px;
+  background-color: @basic-white;
+  cursor: pointer;
+  border: none;
 
   @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 19px;
+  left: 17px;
+  width: 20px;
+  height: 2px;
+  background-color: @special-black;
+  box-shadow: 0 6px 0 0 @special-black, 0 13px 0 0 @special-black;
+}
+
+.main-nav--opened .main-nav__toggle {
+  top: -66px;
+  right: auto;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 24px;
+    left: 18px;
+    width: 27px;
+    height: 2px;
+    background-color: @basic-black;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+}
+
+@media (max-width: @mobile-width-only) {
+  .main-nav--closed .site-list__item {
+    display: none;
+  }
+
+  .main-nav--closed .user-list__item {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__toggle {
     display: none;
   }
 }
