--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -1,29 +1,76 @@
 .product {
   background-color: @basic-white;
+
+  &::after {
+    content: "";
+    display: block;
+    height: 6px;
+    margin: 0;
+    padding: 0;
+    background-image: url("../img/zigzag-separator-mobile.svg");
+    background-repeat: repeat-x;
+    background-size: 320px 100%;
+  }
+
+  @media (min-width: @tablet-width) {
+    &::after {
+      content: "";
+      display: block;
+      height: 17px;
+      margin: 0;
+      padding: 0;
+      background-image: url("../img/zigzag-separator-tablet.svg");
+      background-repeat: repeat-x;
+      background-size: 768px 100%;
+      transform: rotate(180deg);
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &::after {
+      content: "";
+      display: block;
+      height: 23px;
+      margin: 0;
+      padding: 0;
+      background-image: url("../img/zigzag-separator-desktop.svg");
+      background-repeat: repeat-x;
+      background-size: 1050px 100%;
+      transform: rotate(180deg);
+    }
+  }
 }
 
 .product__wrapper {
   padding: 30px;
-  outline: 5px solid lime;
-  outline-offset: -5px;
+  padding-bottom: 36px;
+  display: flex;
+  flex-direction: column;
 
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: min-content 1fr min-content min-content;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 56px;
   }
 
   @media (min-width: @desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: min-content 1fr min-content min-content;
+    padding-top: 69px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 72px;
   }
 }
 
 .product__item {
   display: flex;
-  padding: 8px 0;
-  border-bottom: 1px solid @special-green-lighter;
+  padding: 9px 0 11px;
+  border-bottom: 1px solid @special-grey-lighter;
 
   &:last-child {
     margin-bottom: 28px;
@@ -36,6 +83,8 @@
   font-size: 17px;
   line-height: 20px;
   color: @basic-green;
+  text-transform: uppercase;
+  padding-bottom: 17px;
 
   br {
     display: none;
@@ -51,6 +100,10 @@
     grid-row-start: 1;
     grid-row-end: 2;
     text-align: center;
+    line-height: 17px;
+    padding-top: 27px;
+    justify-self: flex-start;
+    padding-left: 70px;
   }
 
   @media (min-width: @desktop-width) {
@@ -58,8 +111,9 @@
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 2;
-    text-align: center;
-    margin-top: 70px;
+    margin: 0 auto;
+    margin-top: 43px;
+    padding-left: 0;
   }
 }
 
@@ -69,6 +123,8 @@
     grid-column-end: 5;
     grid-row-start: 2;
     grid-row-end: -1;
+    display: block;
+    align-self: end;
   }
 
   @media (min-width: @desktop-width) {
@@ -81,6 +137,8 @@
 
 .product__title {
   margin: 0;
+  order: -1;
+  padding-bottom: 3px;
 
   @media (min-width: @tablet-width) {
     grid-column-start: 1;
@@ -88,6 +146,7 @@
     grid-row-start: 1;
     grid-row-end: 2;
     align-self: flex-start;
+    padding-top: 21px;
   }
 
   @media (min-width: @desktop-width) {
@@ -96,7 +155,8 @@
     grid-row-start: 1;
     grid-row-end: 2;
     z-index: 2;
-    margin-top: 70px;
+    margin-top: 43px;
+    padding-left: 0;
   }
 }
 
@@ -108,6 +168,7 @@
     grid-row-end: 3;
     align-self: flex-start;
     margin-right: 42px;
+    padding-top: 31px;
   }
 
   @media (min-width: @desktop-width) {
@@ -115,6 +176,8 @@
     grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 3;
+    padding-left: 0;
+    margin-right: 55px;
   }
 }
 
@@ -124,16 +187,16 @@
   font-size: 15px;
   line-height: 24px;
   margin: 0;
-  margin-bottom: 28px;
+  margin-bottom: 20px;
 
   @media (min-width: @tablet-width) {
     font-size: 17px;
     line-height: 30px;
-    margin-bottom: 48px;
+    margin-bottom: 38px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 60px;
+    margin-bottom: 52px;
   }
 }
 
@@ -151,6 +214,9 @@
   font-size: 17px;
   line-height: 24px;
   margin: 0;
+  text-align: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
 
   @media (min-width: @tablet-width) {
     grid-column-start: 1;
@@ -158,7 +224,11 @@
     grid-row-start: -3;
     grid-row-end: -2;
     text-align: center;
-    margin-right: 42px;
+    font-size: 20px;
+    line-height: 24px;
+    justify-self: baseline;
+    padding-bottom: 36px;
+    padding-left: 72px;
   }
 
   @media (min-width: @desktop-width) {
@@ -166,18 +236,22 @@
     grid-column-end: 4;
     grid-row-start: 3;
     grid-row-end: 4;
+    justify-self: flex-start;
+    padding-left: 75px;
   }
 }
 
 .product__button {
   margin: 0 auto;
+  width: 100%;
 
   @media (min-width: @tablet-width) {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: -1;
     grid-row-end: -2;
-    margin-right: 42px;
+    margin: 0;
+    width: 292px;
   }
 
   @media (min-width: @desktop-width) {
@@ -185,5 +259,6 @@
     grid-column-end: 4;
     grid-row-start: 4;
     grid-row-end: 5;
+    margin: 0;
   }
 }
