--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -16,20 +16,62 @@
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
-    align-self: center;
+    align-items: center;
+    height: 100%;
+  }
+}
+
+.site-list__item {
+  box-shadow: inset 0 1px 0 @special-grey-lighter;
+
+  @media (min-width: @tablet-width) {
+    box-shadow: none;
+    padding-right: 37px;
+    padding-top: 22px;
+    padding-bottom: 32px;
+
+    &:last-child {
+      padding-right: 0;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 32px;
+    padding-bottom: 27px;
+    border-right: 1px solid fade(@basic-black, 10%);
+    height: inherit;
+
+    &:last-child {
+      border: none;
+      padding-left: 32px;
+    }
   }
 }
 
 .site-list__item a {
+  display: block;
+  padding-top: 27px;
+  padding-bottom: 27px;
   color: @basic-black;
   font-weight: 700;
   font-size: 17px;
   line-height: 24px;
   text-decoration: none;
+  padding-left: 76px;
+  opacity: 1;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 
   @media (min-width: @tablet-width) {
     font-size: 15px;
     line-height: 24px;
+    padding: 0;
   }
 
   @media (min-width: @desktop-width) {
