--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -5,4 +5,36 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.social__item {
+  @media (min-width: @tablet-width) {
+    margin-right: 40px;
+  }
+}
+
+.social__link {
+  &--instagram {
+    display: block;
+    width: 22px;
+    height: 22px;
+    background-image: url("../img/insta.svg");
+  }
+
+  &--facebook {
+    display: block;
+    width: 15px;
+    height: 28px;
+    background-image: url("../img/fb.svg");
+  }
+
+  &--twitter {
+    display: block;
+    width: 23px;
+    height: 20px;
+    background-image: url("../img/twitter.svg");
+  }
 }
