--- a/source/less/blocks/user-list.less
+++ b/source/less/blocks/user-list.less
@@ -9,14 +9,99 @@
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 2;
-    text-align: right;
+    justify-content: space-between;
   }
 }
 
-.user-list__item a {
+.user-list__item {
+  box-shadow: inset 0 1px 0 @special-grey-lighter;
+
+  @media (min-width: @tablet-width) {
+    box-shadow: none;
+
+    &--cart {
+      padding-top: 32px;
+      padding-bottom: 32px;
+    }
+
+    &--search {
+      padding: 0;
+      width: 84px;
+      border-left: 1px solid fade(@basic-black, 10%);
+      border-right: 1px solid fade(@basic-black, 10%);
+    }
+  }
+}
+
+.user-list__item-link {
+  display: block;
   color: @basic-black;
   font-weight: 700;
   font-size: 17px;
   line-height: 24px;
   text-decoration: none;
+  position: relative;
+  padding-left: 76px;
+  padding-top: 28px;
+  padding-bottom: 27px;
+  opacity: 1;
+
+  &:hover path {
+    fill: @basic-green;
+    opacity: 1;
+  }
+
+  &:active path {
+    fill: @basic-green;
+    opacity: 0.3;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+  }
+}
+
+.user-list__icon-search {
+  position: absolute;
+  top: 33px;
+  left: 33px;
+
+  @media (min-width: @tablet-width) {
+    top: 36px;
+  }
+}
+
+.user-list__icon-cart {
+  position: absolute;
+  top: 33px;
+  left: 31px;
+
+  @media (min-width: @tablet-width) {
+    top: 3px;
+    left: -50px;
+  }
+}
+
+.user-list__item-search {
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+
+.user-list__item-cart {
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
