Страница Форма полностью

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -18,6 +18,11 @@
     background-color: @basic-grey;
   }
 
+  &:focus {
+    color: @basic-white;
+    background-color: @basic-grey;
+  }
+
   &:active {
     color: fade(@basic-white, 30%);
   }
