--- a/source/less/blocks/main-form.less
+++ b/source/less/blocks/main-form.less
@@ -6,10 +6,9 @@
   background-color: @basic-white;
   padding-top: 30px;
   padding-bottom: 55px;
-  outline: 5px solid blue;
-  outline-offset: -5px;
 
   @media (min-width: @tablet-width) {
     padding-top: 0;
+    padding-bottom: 50px;
   }
 }
