--- a/source/less/blocks/slogan-form.less
+++ b/source/less/blocks/slogan-form.less
@@ -1,9 +1,15 @@
 .slogan-form__wrapper {
   background-color: @basic-white;
   padding-top: 17px;
-  padding-bottom: 29px;
-  outline: 5px solid sienna;
-  outline-offset: -5px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 65px;
+    margin-bottom: 30px;
+  }
+
+  @media (min-width: @desktop-width)  {
+    padding-top: 112px;
+  }
 }
 
 .slogan-form__text {
