--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -43,5 +43,10 @@
   @media (min-width: @desktop-width) {
     left: calc(50% - 43px);
     top: 20px;
+    z-index: 2;
   }
+}
+
+.page-header__logo {
+  height: 41px;
 }
