--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -4,6 +4,10 @@
   font-size: 19px;
   line-height: 18px;
   padding-right: 20px;
+
+  @media (min-width: @desktop-width) {
+    padding-right: 24px;
+  }
 }
 
 .copyright__link {
@@ -13,5 +17,9 @@
 
   &:active path {
     fill: fade(@special-green-underline-2; 30%);
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-top: 7px;
   }
 }
