--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -8,11 +8,20 @@
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
+
+  @media (min-width: @tablet-width) {
+    justify-content: flex-start;
+  }
 }
 
 .social__item {
   @media (min-width: @tablet-width) {
     margin-right: 40px;
+    margin-bottom: 10px;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
