--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -3,14 +3,20 @@
   font-weight: 700;
   font-size: 19px;
   line-height: 18px;
-  padding-right: 20px;
+  padding-right: 15px;
+
+  @media (min-width: @tablet-width) {
+    padding-right: 27px;
+  }
 
   @media (min-width: @desktop-width) {
-    padding-right: 24px;
+    padding-right: 29px;
   }
 }
 
 .copyright__link {
+  padding-top: 8px;
+
   &:hover path {
     fill: @special-green-underline-2;
   }
@@ -20,6 +26,6 @@
   }
 
   @media (min-width: @tablet-width) {
-    margin-top: 7px;
+    margin-top: -16px;
   }
 }
