Страница каталог полностью

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -5,14 +5,17 @@
 }
 
 .catalog__wrapper {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  outline: 5px solid lime;
-  outline-offset: -5px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 
   @media (min-width: @tablet-width) {
-    padding-top: 110px;
-    padding-bottom: 57px;
+    padding-top: 77px;
+    padding-bottom: 53px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 125px;
+    padding-bottom: 0;
   }
 }
 
