--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -1,6 +1,6 @@
 .card {
   padding: 0;
-  margin-bottom: 0;
+  margin-bottom: 30px;
 
   &:last-child {
     margin-bottom: 0;
@@ -9,6 +9,7 @@
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: row;
+    margin-bottom: 54px;
   }
 
   @media (min-width: @desktop-width) {
@@ -17,17 +18,37 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-bottom: 57px;
+
+    &:last-child {
+      margin-bottom: 57px;
+    }
   }
 }
 
 .card__container {
+  padding-top: 27px;
+  padding-right: 28px;
+  padding-bottom: 26px;
+  padding-left: 28px;
+  border: 1px solid @special-grey-lighter;
+
+  &:hover {
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  &:active {
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  }
+
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 50%;
-    padding-left: 34px;
+    padding-left: 32px;
     padding-right: 33px;
+    padding-bottom: 24px;
   }
 
   @media (min-width: @desktop-width) {
@@ -35,17 +56,24 @@
     min-width: 316px;
     max-width: 316px;
     height: 100%;
-    padding: 26px 20px 28px 28px;
+    padding-top: 26px;
+    padding-right: 32px;
+    padding-bottom: 0;
+    padding-left: 26px;
   }
 }
 
 .card__container-name {
+  padding-bottom: 18px;
+  box-shadow: inset 0 -1px 0 @special-grey-lighter;
+
   @media (min-width: @tablet-width) {
-    padding-top: 27px;
+    box-shadow: none;
   }
 
   @media (min-width: @desktop-width) {
     padding-top: 0;
+    padding-bottom: 13px;
   }
 }
 
@@ -53,6 +81,16 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  box-shadow: inset 0 1px 0 @special-grey-lighter;
+  padding-top: 22px;
+
+  @media (min-width: @desktop-width) {
+    padding-top: 0;
+  }
+}
+
+.card__link-image img {
+  display: block;
 }
 
 .card__title {
@@ -66,12 +104,23 @@
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 24px;
+    max-width: 230px;
   }
 }
 
 .card__link-title {
   color: @basic-black;
   text-decoration: none;
+  padding-bottom: 6px;
+  display: block;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .card__description {
@@ -81,6 +130,11 @@
   color: @basic-grey;
   margin: 0;
   padding: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 15px;
+    line-height: 30px;
+  }
 }
 
 .card__price {
@@ -91,6 +145,10 @@
   margin: 0;
   padding: 0;
 
+  @media (min-width: @tablet-width) {
+    font-size: 17px;
+  }
+
   @media (min-width: @desktop-width) {
     padding: 24px 0;
   }
@@ -98,4 +156,16 @@
 
 .card__picture {
   display: block;
+}
+
+.card__button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  margin-right: -3px;
+
+  @media (min-width: @desktop-width) {
+    margin-right: -1px;
+  }
 }
