--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -1,26 +1,66 @@
 .video {
   margin: 0;
+  margin-bottom: 31px;
   padding: 0;
   background-color: @basic-white;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+  }
 }
 
 .video__wrapper {
   padding: 30px;
-  outline: 5px solid blue;
-  outline-offset: -5px;
+  padding-top: 0;
 
   @media (min-width: @tablet-width) {
     padding: 0 50px 67px 50px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 50px;
+    margin-bottom: 106px;
+  }
+}
+
+.video__wrapper-inner {
+  position: relative;
+  padding-bottom: 30px;
+  box-shadow:
+    inset 0 1px 0 @special-grey-lighter,
+    inset 0 -1px 0 @special-grey-lighter,
+    inset -1px 0 0 @special-grey-lighter,
+    inset 1px 0 0 @special-grey-lighter;
+
+  &:hover {
+    box-shadow:
+      0 6px 10px rgba(0, 0, 0, 0.1),
+      inset 0 1px 0 @special-grey-lighter,
+      inset 0 -1px 0 @special-grey-lighter,
+      inset -1px 0 0 @special-grey-lighter,
+      inset 1px 0 0 @special-grey-lighter;
+  }
+
+  &:active {
+    box-shadow:
+      0 3px 5px rgba(0, 0, 0, 0.1),
+      inset 0 1px 0 @special-grey-lighter,
+      inset 0 -1px 0 @special-grey-lighter,
+      inset -1px 0 0 @special-grey-lighter,
+      inset 1px 0 0 @special-grey-lighter;
+  }
+
+  @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: column;
+    padding-bottom: 46px;
   }
 
   @media (min-width: @desktop-width) {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: min-content min-content min-content;
-    padding: 0 50px;
-    margin-bottom: 60px;
+    grid-template-rows: min-content 1fr min-content;
+    padding-bottom: 0;
   }
 }
 
@@ -30,13 +70,34 @@
   line-height: 24px;
   color: @basic-black;
   margin: 0;
-  padding: 0 34px;
+  padding-left: 91px;
+  padding-right: 34px;
+  padding-top: 23px;
+  padding-bottom: 27px;
+  position: relative;
+
+  &::before {
+    content: url("../img/videocamera.svg");
+    width: 32px;
+    height: 22px;
+    position: absolute;
+    top: 37px;
+    left: 34px;
+  }
 
   @media (min-width: @tablet-width) {
-    padding: 0 40px;
+    font-size: 20px;
+    padding-top: 41px;
+    padding-left: 107px;
+    padding-bottom: 24px;
 
     br {
       display: none;
+    }
+
+    &::before {
+      top: 39px;
+      left: 41px;
     }
   }
 
@@ -46,16 +107,31 @@
     grid-row-start: 1;
     grid-row-end: 2;
     font-size: 20px;
-    margin-top: 96px;
     align-self: self-start;
+    margin: 0;
+    padding: 0;
+    padding-left: 62px;
+    padding-top: 95px;
+    padding-bottom: 28px;
 
     br {
       display: inline;
+    }
+
+    &::before {
+      top: 47px;
+      left: 61px;
     }
   }
 }
 
 .video__container {
+  position: relative;
+
+  img {
+    display: block;
+  }
+
   @media (min-width: @tablet-width) {
     order: -1;
   }
@@ -79,9 +155,15 @@
   color: @basic-grey;
   margin: 0;
   padding: 0 34px;
+  padding-right: 30px;
+  padding-top: 35px;
+  padding-bottom: 41px;
 
   @media (min-width: @tablet-width) {
     padding: 0 40px;
+    font-size: 15px;
+    line-height: 30px;
+    padding-bottom: 40px;
   }
 
   @media (min-width: @desktop-width) {
@@ -90,6 +172,7 @@
     grid-row-start: 2;
     grid-row-end: 3;
     align-self: self-start;
+    padding-left: 62px;
   }
 }
 
@@ -107,5 +190,27 @@
     grid-row-end: -2;
     min-height: 52px;
     align-self: self-start;
+    justify-self: center;
+    width: 230px;
+    margin-bottom: 60px;
+  }
+}
+
+.video__play-button {
+  position: absolute;
+  top: calc(50% - 38px);
+  left: calc(50% - 50px);
+
+  &:hover {
+    transform: scale(1.2);
+  }
+
+  &:active {
+    transform: scale(0.8);
+    opacity: 0.3;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: calc(50% - 57px);
   }
 }
