Пседвоэлемент снизу, кнопка сверху

--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -110,6 +110,10 @@
       top: 39px;
       left: 41px;
     }
+
+    @media (min-width: @desktop-width) {
+      z-index: 2;
+    }
   }
 
   @media (min-width: @desktop-width) {
@@ -184,6 +188,7 @@
     grid-row-end: 3;
     align-self: self-start;
     padding-left: 62px;
+    z-index: 2;
   }
 }
 
@@ -204,6 +209,7 @@
     justify-self: center;
     width: 230px;
     margin-bottom: 60px;
+    z-index: 2;
   }
 }
 
