Адаптивная графика Главной

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -32,8 +32,8 @@
 
   @media (min-width: @tablet-width) {
     position: absolute;
-    left: calc(50% - 334px);
-    top: 20px;
+    left: calc(50% - 336px);
+    top: 12px;
     z-index: 1;
     padding-top: 10px;
     padding-bottom: 0;
@@ -41,12 +41,12 @@
   }
 
   @media (min-width: @desktop-width) {
-    left: calc(50% - 43px);
-    top: 20px;
+    left: calc(50% - 75px);
+    top: -1px;
     z-index: 2;
   }
 }
 
 .page-header__logo {
-  height: 41px;
+  //height: 41px;
 }
