--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -54,12 +54,16 @@
   @media (min-width: @tablet-width) {
     padding: 50px;
     padding-bottom: 85px;
-    background-image: url("../img/review.jpg");
+    background-image: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
-
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: min-content min-content;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/review@2x.jpg");
+      background-size: 350px auto;
+    }
   }
 
   @media (min-width: @desktop-width) {
