--- a/source/less/blocks/sections-nav.less
+++ b/source/less/blocks/sections-nav.less
@@ -21,6 +21,7 @@
       padding-top: 3%;
       background-image: url("../img/zigzag-fill-tablet.svg");
       background-repeat: repeat-x;
+      background-size: 770px auto;
       background-position: 50% 100%;
     }
   }
@@ -29,16 +30,15 @@
     &::after {
       content: "";
       position: absolute;
-      bottom: -15px;
+      bottom: -20px;
       left: 0;
       display: block;
       width: 100%;
-      height: 24px;
+      height: 34px;
       max-height: 34px;
-      padding-top: 3%;
-      background-image: url("../img/zigzag-fill-desktop.svg");
+      padding-top: 5%;
       background-repeat: repeat-x;
-      background-position: 50% 100%;
+      background-size: 1250px auto;
     }
   }
 }
