--- a/source/less/blocks/slogan.less
+++ b/source/less/blocks/slogan.less
@@ -8,15 +8,25 @@
 }
 
 .slogan__wrapper {
-  background-image: url("../img/hero-mobile-bg.jpg");
+  background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: top -15px center;
   min-height: 283px;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/hero-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
+
   @media (min-width: @tablet-width) {
     min-height: 550px;
-    background-image: url("../img/hero-tablet-bg.jpg");
+    background-image: url("../img/hero-desktop@1x.jpg");
     background-position: top -77px center;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/hero-desktop@2x.jpg");
+      background-size: 768px auto;
+    }
 
     br:first-child {
       display: none;
