--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -32,24 +32,14 @@
 }
 
 .social__link {
-  &--instagram {
-    display: block;
-    width: 22px;
-    height: 22px;
-    background-image: url("../img/insta.svg");
+  color: @basic-black;
+
+  &:hover {
+    color: @special-green-underline-2;
   }
 
-  &--facebook {
-    display: block;
-    width: 15px;
-    height: 28px;
-    background-image: url("../img/fb.svg");
-  }
-
-  &--twitter {
-    display: block;
-    width: 23px;
-    height: 20px;
-    background-image: url("../img/twitter.svg");
+  &:active {
+    color: @special-green-underline-2;
+    opacity: 0.3;
   }
 }
