--- a/source/less/blocks/user-list.less
+++ b/source/less/blocks/user-list.less
@@ -46,13 +46,23 @@
   padding-bottom: 27px;
   opacity: 1;
 
-  &:hover path {
-    fill: @basic-green;
+  &:hover .user-list__icon-search {
+    color: @basic-green;
     opacity: 1;
   }
 
-  &:active path {
-    fill: @basic-green;
+  &:active .user-list__icon-search {
+    color: @basic-green;
+    opacity: 0.3;
+  }
+
+  &:hover .user-list__icon-cart {
+    color: @basic-green;
+    opacity: 1;
+  }
+
+  &:active .user-list__icon-cart {
+    color: @basic-green;
     opacity: 0.3;
   }
 
@@ -65,6 +75,8 @@
   position: absolute;
   top: 33px;
   left: 33px;
+  color: @basic-black;
+  opacity: 0.2;
 
   @media (min-width: @tablet-width) {
     top: 36px;
@@ -75,6 +87,7 @@
   position: absolute;
   top: 33px;
   left: 31px;
+  opacity: 0.2;
 
   @media (min-width: @tablet-width) {
     top: 3px;
