--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -11,6 +11,8 @@
 @special-green-underline: #62D1BA;
 @special-green-underline-2: #46C1AE;
 @special-grey-divide: #e5e5e5;
+@special-green-icon: #149080;
+
 
 // Viewports
 
