21. Оптимизация графики на странице каталога

--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -179,3 +179,18 @@
     margin-right: -1px;
   }
 }
+
+.card__button-icon {
+  color: @basic-black;
+  opacity: 0.2;
+
+  &:hover {
+    color: @basic-green;
+    opacity: 1;
+  }
+
+  &:active {
+    color: @basic-green;
+    opacity: 0.3;
+  }
+}
